# rocky

./: .gitignore  Cargo.toml
crates/browser/: Cargo.toml
crates/browser/examples/: google_search.rs  mod.rs
crates/browser/src/: lib.rs  worker.rs
crates/browser/src/shared/: config.rs  errors.rs  mod.rs
crates/browser/src/shared/js/: cookie.rs  element.rs  mod.rs  wait.rs
crates/browser/src/worker/: mod.rs
crates/browser/src/worker/chromium/: actions.rs  mod.rs  wait.rs  worker.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/examples/: mod.rs
crates/parser/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
