[package]
name = "browser"
version = "0.1.0"
edition = "2024"

[dependencies]
rocky_core = { path = "../core" }

async-trait = "0.1.89"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["time"] }
chromiumoxide = { version = "0.7.0", features = ["tokio"] }
uuid = { version = "1.18.1", features = ["v4"] }


# NOT REQUIRED
rocky_scheduler = { path = "../scheduler" }
rocky_parser = { path = "../parser" }
rocky_storage = { path = "../storage" }
futures = "0.3.31"
