[package]
name = "rocky_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12.24", features = ["json"] }
async-trait = "0.1.89"
scraper = "0.24.0"
serde_json = "1.0.145"

rocky_core = { path = "../core" }
rocky_scheduler = { path = "../scheduler" }

tokio = { version = "1.48.0", features = ["full"] } # Not required, this is just for the example.